# s3-explorer

./: LICENSE  README.md  jsconfig.json  package.json  vetur.config.js  vite.config.ts
src/: App.vue  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: files.rs  main.rs
src-tauri/src/aws/: mod.rs  profile.rs  s3.rs
src-tauri/src/config/: favorite.rs  mod.rs
src-tauri/src/error/: aws_error.rs  mod.rs
src/components/: LocalExplorerMenu.vue  ProfilesComponent.vue  S3ExplorerBuckets.vue  S3ExplorerMenu.vue  S3ExplorerObjects.vue  S3ExplorerOperation.vue  SIdeMenu.vue
src/components/atoms/: InputPathField.vue  ToggleSwitch.vue
src/components/dialog/: ConfirmDialog.vue  CreateFolderDialog.vue  SettingDialog.vue
src/components/empty/: AccessDenied.vue  NoSelectedBucket.vue  ObjectNotFound.vue
src/pages/: LocalExplorer.vue  S3Explorer.vue
src/repository/: config.ts  s3.ts  ui.ts
