[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.57"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.3", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.3", features = ["api-all"] }

# Date and time library
chrono = "0.4.19"
# パーミッションのst_modeをstringに変換
strmode = "1.0.0"
# UID, GIDを名称に変換するため
users = "0.11"
# ディレクトリ操作
dirs = "1.0.4"
platform-dirs = "0.3.0"
# 正規表現
regex = "1.5.6"
# ファイルを開く
opener = "0.5.0"
# ZIP
zip = "0.6.2"
walkdir = "2.3.2"
time = "0.3.13"

# AWS関連のSDK
aws-config = "0.46.0"
aws-sdk-s3 = "0.16.0"
aws-sdk-sts = "0.16.0"
aws-smithy-types = "0.46.0"
aws-types = "0.46.0"
tokio = {version = "1", features = ["full"] }
tokio-stream = "0.1.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
